# uviz

./: .gitignore  =4.2.0  LICENSE  README.md  geocat.yml  mpas_tools.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  uviz.yml
mpas_tools/database/: utils.py
mpas_tools/datashader/: datashader_mpas.py  datashader_wrapper.sh
mpas_tools/datashader_tools/: datashader_mpas.py  resolution_test.py  utils.py
mpas_tools/debugging_notebooks/: tempest_florida.ipynb  tempest_wrangling.ipynb  tempest_wrangling_csv.ipynb  tempest_wrangling_csv_fixed.ipynb  tempest_wrangling_xarray.ipynb
mpas_tools/plotting/: IR4AVHRR6.cpt  cpt_convert.py  utils.py
mpas_tools/tempest_extremes/: drive-tracking-reanalysis.sh  storm_1279_track.csv  trajectories.csv.NE30  trajectories.txt.NE30  utils.py
mpas_tools/utils/: processing.py  tools.py
src/mpas_tools/datashader_tools/: datashader_wrapper.sh  utils.py
src/mpas_tools/debugging_notebooks/: track_1279_wrangling.ipynb
src/mpas_tools/tempest_extremes/model_traj/: trajectories.txt.CHEY.VR28.NATL.EXT.CAM5.4CLM5.0.dtime900  trajectories.txt.CHEY.VR28.NATL.REF.CAM5.4CLM5.0.dtime900
src/mpas_tools/utils/: tools.py
src/uviz/datashader_tools/: utils.py  visualization.py
src/uviz/debugging_notebooks/: all_sims.ipynb  datashader_hires_sandbox.ipynb  datashader_lowres.ipynb  dataviz_adventures-Copy1.ipynb  dataviz_adventures.ipynb  ddf_curves.ipynb  make_datashader_gifs.ipynb  mpas_vorticity.ipynb  plot_tracks.py  prototype_sims.ipynb  swath_and_structure_plots.ipynb  tempest_florida.ipynb  tempest_wrangling_csv.ipynb
src/uviz/plotting/: hv_plot.py  mpl_plot.py  processing.py  statistics.py  utils.py
src/uviz/shell_scripts/: recreate_figs.py
src/uviz/tempest_extremes/: drive-tracking-reanalysis.sh  ibtracs.py  metrics.py  processing.py  storm_0236_track.csv  storm_0310_track.csv  storm_0528_track.csv  storm_0755_track.csv  storm_1048_track.csv  storm_1279_track.csv  storm_1307_track.csv  storm_1354_track.csv  storm_1521_track.csv  trajectories.txt.CORI.VR28.NATL.WAT.CAM5.4CLM5.0.dtime900.003
src/uviz/tempest_extremes/model_traj/: trajectories.txt.CHEY.VR28.NATL.EXT.CAM5.4CLM5.0.dtime900.002  trajectories.txt.CHEY.VR28.NATL.REF.CAM5.4CLM5.0.dtime900.002  trajectories.txt.CHEY.VR28.NATL.WAT.CAM5.4CLM5.0.dtime900  trajectories.txt.CHEY.VR28.NATL.WAT.CAM5.4CLM5.0.dtime900.002  trajectories.txt.CORI.VR28.NATL.EXT.CAM5.4CLM5.0.dtime900.003  trajectories.txt.CORI.VR28.NATL.REF.CAM5.4CLM5.0.dtime900.003
src/uviz/utils/: processing.py  tools.py
