[metadata]
name = mpas-tools-cdeciampa
version = 0.0.1
author = Corrine DeCiampa
author_email = cnd5285@psu.edu
description = Tools for MPAS/xarray wrangling.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cdeciampa/mpas_tools
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = mpas_tools
packages = find:
python_requires = >=3.8

[options.packages.find]
where = mpas_tools
