[metadata]
name = uviz
version = 0.1.0
description = Tools for Unstructured climate model grid VIsualiZation
long_description = file: README.md
long_description_content_type = text/markdown
author = Corrine DeCiampa
platform = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
    Operating System :: OS Independent
url = https://github.com/cdeciampa/uviz
project_urls =
    Documentation = https://github.com/cdeciampa/uviz
    Source Code = https://github.com/cdeciampa/uviz

[options]
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.9
install_requires =
    bokeh>=3.1.1
    datashader>=0.15.0
    geoviews>=1.10.0
    holoviews>=1.16.1
    matplotlib>=3.7.1
    numpy>=1.23.5
    pandas>=1.5.3
    pyarrow>=10.0.1
    requests>=2.28.1
    scikit-learn>=1.2.1
    scipy>=1.10.1
    shapely>=2.0.1
    spatialpandas>=0.4.8
    haversine>=2.7.0 

[options.packages.find]
where = src
